# worklog-shell

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
create_invoice/: Cargo.toml  plan.md
create_invoice/data/template/: main.typ
create_invoice/src/: files.rs  invoice.rs  main.rs  pdf.rs  structs.rs
data/github/workflows/: ci.yml
example/2023-09-20/: breaks  exampleproject  impediments  learnings  rating  todo.md  work  worklog
src/: file.rs  main.rs  parse.rs
tax_prep/: Cargo.toml  Makefile  Readme.md
tax_prep/src/: image_optimization.rs  llma_ocr.rs  main.rs  ocr.rs  parse.rs
worklog/: Cargo.toml  README.md
worklog/data/template/: learnings.html
