[package]
name = "create_invoice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
#fastnum = { version = "0.2", features = ["serde"] }
#glob = { version = "" }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
glob = "0.3.2"
rand = "0.9.1"
#typst = "0.13.1"
