[package]
name = "tax_prep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
glob = "0.3.2"
#tesseract = "0.10.0"
image = "0.25.6"
regex = "1.10.3"
#llama-cpp-rs = "0.3.0"
imageproc = "0.25.0"
rusttype = "0.9"

